--- a/esercizi/base.css
+++ b/esercizi/base.css
@@ -15,6 +15,10 @@ h1.titolo2 {color: AliceBlue;}
 
 .titolo.maiuscolo {color: #334455; text-transform: uppercase;}
 
+.titolo3 {color: red;}
+
+.maiuscolo3 {text-transform: uppercase;}
+
 /* # is for id attribute */
 #titolo3 {color: #6600ff;} /* viola */
 
