--- a/esercizi/base.css
+++ b/esercizi/base.css
@@ -9,18 +9,18 @@ p {color: green;}
 li {color: blue;}
 
 /* . is for class attribute */
-.titolo {color: #334455;}
+.titolo {color: DarkTurquoise;}
 
 h1.titolo2 {color: AliceBlue;}
 
-.titolo.maiuscolo {color: #334455; text-transform: uppercase;}
+.titolo.maiuscolo {color: DarkCyan; text-transform: uppercase;}
 
-.titolo3 {color: red;}
+.titolo3 {color: blue;}
 .maiuscolo3 {text-transform: uppercase;}
-.maiuscolo4 {color: #334455; text-transform: uppercase;}
+.maiuscolo4 {color: DarkCyan; text-transform: uppercase;}
 
-.maiuscolo5 {color: #334455; text-transform: uppercase;}
-.titolo5 {color: red;}
+.maiuscolo5 {color: DarkCyan; text-transform: uppercase;}
+.titolo5 {color: blue;}
 
 .titolo6.maiuscolo6 {color: yellow; text-transform: uppercase;}
 
